.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:51:38 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
make: Nothing to be done for 'all'.
21:55:19 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
make: Nothing to be done for 'all'.
21:59:29 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
21:59:45 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
21:59:49 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
22:02:13 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:47:2: error: 'PORTD_PDDR' undeclared (first use in this function)
  PORTD_PDDR = (1 << 4);
  ^
../Sources/main.c:47:2: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:61:3: error: 'GPI0A_PDOR' undeclared (first use in this function)
   GPI0A_PDOR = 0;
   ^
../Sources/main.c: At top level:
../Sources/main.c:71:5: error: expected identifier or '(' before 'return'
     return 0;
     ^
../Sources/main.c:72:1: error: expected identifier or '(' before '}' token
 }
 ^
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
22:05:05 **** Incremental Build of configuration Debug for project Lab1 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
Finished building: ../Sources/main.c
 
Building file: ../Project_Settings/Startup_Code/system_MK20D5.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Project_Settings/Startup_Code/system_MK20D5.d" -MT"Project_Settings/Startup_Code/system_MK20D5.o" -c -o "Project_Settings/Startup_Code/system_MK20D5.o" "../Project_Settings/Startup_Code/system_MK20D5.c"
Finished building: ../Project_Settings/Startup_Code/system_MK20D5.c
 
Building target: Lab1.elf
Invoking: Cross ARM C++ Linker
arm-none-eabi-g++ -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -T "MK20DX128xxx5_flash.ld" -Xlinker --gc-sections -L"C:/Users/Sienna/Documents/NewWorkSpace/Sienna-Rose-Price-Labs/Lab1/Project_Settings/Linker_Files" -Wl,-Map,"Lab1.map" -specs=nano.specs -specs=nosys.specs -o "Lab1.elf"  ./Sources/main.o  ./Project_Settings/Startup_Code/startup_MK20D5.o ./Project_Settings/Startup_Code/system_MK20D5.o   
Finished building target: Lab1.elf
 
22:40:18 **** Build of configuration Debug for project Lab3 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c:38:1: warning: return type defaults to 'int' [enabled by default]
 set_LED(r,g,b){
 ^
../Sources/main.c: In function 'set_LED':
../Sources/main.c:38:1: warning: type of 'r' defaults to 'int' [enabled by default]
../Sources/main.c:38:1: warning: type of 'g' defaults to 'int' [enabled by default]
../Sources/main.c:38:1: warning: type of 'b' defaults to 'int' [enabled by default]
../Sources/main.c:40:3: error: 'GPIOC_PDOR' undeclared (first use in this function)
   GPIOC_PDOR = 0;
   ^
../Sources/main.c:40:3: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:42:15: error: expected ';' before '{' token
  else (r = 0) {
               ^
../Sources/main.c: In function 'main':
../Sources/main.c:64:2: error: 'SIM_SCGC5' undeclared (first use in this function)
  SIM_SCGC5 |= 0x3e00;
  ^
../Sources/main.c:70:2: error: 'PORTC_PCR3' undeclared (first use in this function)
  PORTC_PCR3 = 0x100; //red
  ^
../Sources/main.c:71:2: error: 'PORTD_PCR4' undeclared (first use in this function)
  PORTD_PCR4 = 0x100; //green
  ^
../Sources/main.c:72:2: error: 'PORTA_PCR2' undeclared (first use in this function)
  PORTA_PCR2 = 0x100; //blue
  ^
../Sources/main.c:75:2: error: 'GPIOC_PDDR' undeclared (first use in this function)
  GPIOC_PDDR = (1 << 3);
  ^
../Sources/main.c:76:2: error: 'GPIOD_PDDR' undeclared (first use in this function)
  GPIOD_PDDR = (1 << 4);
  ^
../Sources/main.c:77:2: error: 'GPIOA_PDDR' undeclared (first use in this function)
  GPIOA_PDDR = (1 << 2);
  ^
../Sources/main.c:108:1: error: expected declaration or statement at end of input
 }
 ^
../Sources/main.c:108:1: error: expected declaration or statement at end of input
../Sources/main.c:108:1: error: expected declaration or statement at end of input
../Sources/main.c:108:1: error: expected declaration or statement at end of input
../Sources/main.c:108:1: error: expected declaration or statement at end of input
../Sources/main.c:108:1: error: expected declaration or statement at end of input
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
